--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="styles\normalize.css"/>
-  <link rel="stylesheet" href="styles\style.css"/>
+  <link rel="stylesheet" href="pages/index.css"/>
 </head>
 <body>
-  <div class="page">
+  <div class="root">
     <header class="header">
       <a href="#" class="logo logo_place_header">
         <img src="./images/logo_place_header.svg" alt="Лого Яндекс">
@@ -21,7 +20,7 @@
       </p>
       <img src="./images/header-image.png"
       alt="Иллюстрация Опять-Два" class="header__main-illustration">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <section class="description">
       <div class="two-columns">
@@ -45,6 +44,91 @@
           </p>
         </div>
       </div>
+    </section>
+    <section class="techniques">
+      <h2 class="section-title">Техники обучения</h2>
+      <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+      <ul class="cards">
+        <li class="cards__item">
+          <div class="cards__image cards__image_pic_attention"></div>
+          <h4 class="cards__title">Два вида внимания</h4>
+          <p class="cards__description">
+            Глубокие знания возникают, если чередовать
+            сфокусированное и рассеянное мышление.
+          </p>
+        </li>
+        <li class="cards__item">
+          <div class="cards__image cards__image_pic_recall"></div>
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">
+            Вспоминайте изученное — это позволит
+            соединить разрозненные порции памяти.
+          </p>
+        </li>
+        <li class="cards__item">
+          <div class="cards__image cards__image_pic_interliving"></div>
+          <h4 class="cards__title">Интерливинг</h4>
+          <p class="cards__description">
+            Изучайте несколько навыков одновременно,
+            они обогащают друг друга.
+          </p>
+        </li>
+        <li class="cards__item">
+          <div class="cards__image cards__image_pic_question"></div>
+          <h4 class="cards__title">Вопросы</h4>
+          <p class="cards__description">
+            Слушая преподавателя, придумывайте хороший вопрос,
+            который вас действительно волнует.
+          </p>
+        </li>
+        <li class="cards__item">
+          <div class="cards__image cards__image_pic_competence"></div>
+          <h4 class="cards__title">Иллюзия компетентности</h4>
+          <p class="cards__description">
+            Повторите про себя, запишите, расскажите другу:
+            вам только кажется, что вы владеете новой темой.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <h2 class="section-title">Видео нa TED</h2>
+      <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+      <ul class="video__iframes">
+        <li class="video__iframe">
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          title="YouTube video player" style="border:0;"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </li>
+        <li class="video__iframe">
+          <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+          title="YouTube video player" style="border:0;"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+        </li>
+      </ul>
+    </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+        <div class="two-columns__main-text">
+          <p class="two-columns__paragraph">
+            С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
+            причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку,
+            да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+            И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые
+            трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">Метод Фейнмана</h2>
+      <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
+      <a href="#" class="feynman__link">Подробнее &#8594;</a>
+      <img src="./images/feynman.png" alt="Фото Фейнмана"
+      class="feynman__background-pic">
     </section>
     <section class="digits">
       <h2 class="section-title">Цифры и факты</h2>
@@ -92,15 +176,26 @@
         </li>
       </ul>
     </section>
-    <section class="feynman">
-      <h2 class="feynman__title">Метод Фейнмана</h2>
-      <h3 class="feynman__subtitle"> Выучить и не забыть.</h3>
-      <a href="#" class="feynman__link">Подробнее &#8594;</a>
-      <img src="./images/feynman.png" alt="Фото Фейнмана"
-      class="feynman__background-pic">
+    <section class="khan">
+      <div class="khan__container">
+        <h3 class="khan__author">Салман Хан</h3>
+        <h2 class="khan__title">Весь мир — школа</h2>
+        <p class="khan__quote">
+          Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+          студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+          кто занимается образованием — так учащиеся повсюду смогут получить навыки
+          и знания, которые приносят успех в школе, карьере и жизни.
+        </p>
+        <h3 class="khan__quote-author">Джордж Лукас</h3>
+        <h4 class="khan__quote-author-subline">Кинорежиссер, продюсер</h4>
+        <div class="khan__book-container">
+          <img src="./images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
+          <a href="#" class="khan__buy-link">Купить книгу &#8594;</a>
+        </div>
+      </div>
     </section>
     <section class="kaufman">
-      <div class="kaufman__triangle"></div>
+      <div class="kaufman__triangle rotation"></div>
       <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
       <h3 class="section-subtitle section-subtitle_theme-dark">от Джоша Кауфмана</h3>
       <ul class="table table_theme_dark">
@@ -164,6 +259,32 @@
           <p class="table__text table__text_theme_dark">
             Уделяйте внимание количеству и скорости.
           </p>
+        </li>
+      </ul>
+    </section>
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+      <ul class="resources__logo-zone">
+        <li class="resources__link">
+          <a href="#" target="_blank">
+            <img src="./images/logo/resources-arzamas.svg" alt="Лого-Арзамас" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#" target="_blank">
+            <img src="./images/logo/resources-n1.svg" alt="Лого-Н+1" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#" class="resources__link" target="_blank">
+            <img src="./images/logo/resources-strelka.svg" alt="Лого-Стрелка" class="resources__logo">
+          </a>
+        </li>
+        <li class="resources__link">
+          <a href="#" target="_blank">
+            <img src="./images/logo/resources-polka.svg" alt="Лого-Полка" class="resources__logo">
+          </a>
         </li>
       </ul>
     </section>
